# ego-planner

./: .gitignore
src/: EGO_PLANNER_WS_LEARNING_GUIDE.md
src/planner/bspline_opt/: BSPLINE_OPT_DETAILED_GUIDE.md
src/planner/bspline_opt/src/: bspline_optimizer.cpp  gradient_descent_optimizer.cpp  uniform_bspline.cpp
src/planner/path_searching/: CMakeLists.txt  PATH_SEARCHING_DETAILED_GUIDE.md
src/planner/path_searching/include/path_searching/: dyn_a_star.h
src/planner/path_searching/src/: dyn_a_star.cpp
src/planner/plan_env/: PLAN_ENV_DETAILED_GUIDE.md
src/planner/plan_env/src/: grid_map.cpp  raycast.cpp
src/planner/plan_manage/: CMakeLists.txt  PLAN_MANAGE_DETAILED_GUIDE.md
src/planner/plan_manage/launch/: default.rviz  run_in_sim.launch  simple_run.launch  simulator.xml
src/planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/planner/traj_utils/: TRAJ_UTILS_DETAILED_GUIDE.md
src/planner/traj_utils/src/: planning_visualization.cpp  polynomial_traj.cpp
src/uav_simulator/Utils/quadrotor_msgs/: CMakeLists.txt
src/uav_simulator/Utils/rviz_plugins/: CMakeLists.txt  package.xml
src/uav_simulator/local_sensing/: CMakeLists.txt  LOCAL_SENSING_DETAILED_GUIDE.md
src/uav_simulator/local_sensing/src/: depth_render.cu  (+2 more)
src/uav_simulator/map_generator/: MAP_GENERATOR_DETAILED_GUIDE.md
src/uav_simulator/mockamap/: MOCKAMAP_DETAILED_GUIDE.md
src/uav_simulator/so3_control/: SO3_CONTROL_DETAILED_GUIDE.md
src/uav_simulator/so3_quadrotor_simulator/: SO3_QUADROTOR_SIMULATOR_DETAILED_GUIDE.md
(+27 files in other folders)
